--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,6 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/relax">Sonidos relajantes</a>
                         </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link" href="/usuarios">Usuarios</a>
+                        </li>
                     </ul>
                     <div class="d-flex justify-content-end">
                         <a href="/login">
