complete crud and alerts

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,8 @@
     <style> .custom-navbar {
         border-radius: 25px; 
         border: 0.5px solid #fff; 
+        background-color: #6322c5;
       }
-      
       .btn-gradient {
             background: linear-gradient(to right, #F472B6, #FDE68A);
             color: #4C1D95;
@@ -21,7 +21,7 @@
     </style>
 </head>
 
-<body>
+<body >
     <header class="py-4">
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
             <div class="container-fluid">
