--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,21 +28,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="../static/RelaxMeditation.jpg" class="d-block w-100 rounded-5" alt="...">
+                    <img src="../../static/RelaxMeditation.jpg" class="d-block w-100 rounded-5" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="txt-gradient">Informate sobre el estres</h5>
                         <p class="text-light">Enterate de como el estres afecta a tu cuerpo y de que manera puedes aminorarlo</p>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../static/RelaxHearing.jpg" class="d-block w-100 mh-90 rounded-5" alt="...">
+                    <img src="../../static/RelaxHearing.jpg" class="d-block w-100 mh-90 rounded-5" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="txt-gradient">Relajate y medita</h5>
                         <p class="text-light">Mejora tu entorno con sonidos relajantes y meditaciones guadas por voz</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../static/ConectWithIa.png" class="d-block w-100 mh-90 rounded-5" alt="...">
+                    <img src="../../static/ConectWithIa.png" class="d-block w-100 mh-90 rounded-5" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Interactua con la IA </h5>
                         <p>Habla con la inteligecia artificial que te guiara en metodos que ayudan al control de e estres y la ansiedad</p>
