--- a/app/templates/usuarios.html
+++ b/app/templates/usuarios.html
@@ -1,56 +1,136 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuarios</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <h1 class="mt-5">Lista de Usuarios</h1>
+<style> 
+    .bg-purple-dark {
+        background-color: #6322c5;
+    }
+</style>
 
+{% extends "base.html" %}
+
+{% block body %}
+<body class="bg-white">
+    <div class="container">
+
+        {% with messages = get_flashed_messages(with_categories=True) %}
+          {% if messages %}
+            <div id="alert-container" class="mt-4 container">
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
+        
+        <h1 class="mt-5">Lista de Usuarios</h1>
         
         <button class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#modalCrear">Crear Usuario</button>
 
         <table class="table mt-3">
             <thead>
                 <tr>
-                    
                     <th>Nombre</th>
                     <th>Email</th>
                     <th>Edad</th>
                     <th>Pais</th>
                     <th>Genero</th>
                     <th>Acciones</th>
-                    
                 </tr>
             </thead>
             <tbody>
                 {% for usuario in usuarios %}
                 <tr>
-                    
                     <td>{{ usuario.name }}</td>
                     <td>{{ usuario.email }}</td>
-                    <td>{{usuario.age}} </td>
-                    <td>{{usuario.country}}</td>
-                    <td>{{usuario.sex}} </td>
+                    <td>{{ usuario.age }}</td>
+                    <td>{{ usuario.country }}</td>
+                    <td>{{ usuario.sex }}</td>
                     <td>
-                        
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar" 
-                                onclick="editarUsuario('{{ usuario.id }}', '{{ usuario.nombre }}', '{{ usuario.email }}')">Editar</button>
+                        <!-- Botón para abrir el modal de edición -->
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar{{ usuario.id }}" 
+                                onclick="editarUsuario('{{ usuario.id }}', '{{ usuario.name }}', '{{ usuario.email }}', '{{ usuario.age }}',
+                                '{{ usuario.country }}', '{{ usuario.sex }}'
+                                )">Editar</button>
 
-                        
-                        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" 
+                        <!-- Modal de edición -->
+                        <div class="modal fade" id="modalEditar{{ usuario.id }}" tabindex="-1" aria-labelledby="modalEditarLabel{{ usuario.id }}" aria-hidden="true">-
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <form method="POST" action="{{ url_for('actualizar_usuario_route', user_id=usuario.id) }}">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="modalEditarLabel{{ usuario.id }}">Editar Usuario</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input type="hidden" id="edit_id{{ usuario.id }}" name="id" value="{{ usuario.id }}">
+
+                                            <div class="mb-3">
+                                                <label for="edit_name{{ usuario.id }}" class="form-label">Nombre</label>
+                                                <input type="text" class="form-control" id="edit_name{{ usuario.id }}" name="name" value="{{ usuario.name }}" required minlength="3">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="edit_email{{ usuario.id }}" class="form-label">Email</label>
+                                                <input type="email" class="form-control" id="edit_email{{ usuario.id }}" name="email" value="{{ usuario.email }}" required>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="edit_age{{ usuario.id }}" class="form-label">Edad</label>
+                                                <input type="number" class="form-control" id="edit_age{{ usuario.id }}" name="age" value="{{ usuario.age }}" required min="5" max="100">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="edit_country{{ usuario.id }}" class="form-label">Pais</label>
+                                                <input type="text" class="form-control" id="edit_country{{ usuario.id }}" name="country" value="{{ usuario.country }}" required minlength="4">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="edit_sex{{ usuario.id }}" class="form-label">Genero</label>
+                                                <select class="form-control" id="edit_sex{{usuario.id}}" name="sex" required>
+                                                    <option value="Masculino" {% if usuario.sex == "Masculino"%} selected {%endif%}>Masculino</option>
+                                                    <option value="Femenino" {% if usuario.sex == "Femenino"%} selected {%endif%}>Femenino</option>
+                                                </select>
+                                            </div>
+                                            
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Botón para abrir el modal de eliminación -->
+                        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar{{ usuario.id }}" 
                                 onclick="eliminarUsuario('{{ usuario.id }}')">Eliminar</button>
+
+                        <!-- Modal de eliminación -->
+                        <div class="modal fade" id="modalEliminar{{ usuario.id }}" tabindex="-1" aria-labelledby="modalEliminarLabel{{ usuario.id }}" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <form method="POST" action="{{ url_for('eliminar_usuario_route', user_id=usuario.id) }}">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="modalEliminarLabel{{ usuario.id }}">Eliminar Usuario</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input type="hidden" id="delete_id{{ usuario.id }}" name="id" value="{{ usuario.id }}">
+                                            <p>¿Estás seguro de que deseas eliminar este usuario?</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-danger">Eliminar</button>
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
 
-       
+        <!--Paginado-->
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 {% for num in range(1, total_pages + 1) %}
@@ -61,5 +141,76 @@
             </ul>
         </nav>
     </div>
+
+    <!-- Modal para crear usuario -->
+    <div class="modal fade" id="modalCrear" tabindex="-1" aria-labelledby="modalCrearLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="POST" action="{{ url_for('crear_usuario_route') }}">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalCrearLabel">Crear Usuario</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required minlength="3">
+                        </div>
+                        <div class="mb-3">
+                            <label for="age" class="form-label">Edad</label>
+                            <input type="number" class="form-control" id="age" name="age" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="country" class="form-label">Pais</label>
+                            <input type="text" class="form-control" id="country" name="country" required minlength="4">
+                        </div>
+                        <div class="mb-3">
+                            <label for="sex" class="form-label">Genero</label>
+                            <select class="form-control" id="sex" name="sex" required >
+                                <option value="">Seleccione</option>
+                                <option value="Masculino">Masculino</option>
+                                <option value="Femenino">Femenino</option>
+                                <p>otro</p>
+                            </select>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Crear</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        function editarUsuario(id, nombre, email, age, country, sex) {
+            document.getElementById('edit_id' + id).value = id;
+            document.getElementById('edit_nombre' + id).value = nombre;
+            document.getElementById('edit_email' + id).value = email;
+            document.getElementById('edit_age' + id).value = age;
+            document.getElementById('edit_email' + id).value = country;
+            document.getElementById('edit_email' + id).value = sex;
+        }
+
+        function eliminarUsuario(id) {
+            document.getElementById('delete_id' + id).value = id;
+        }
+
+        setTimeout(function(){
+            let alertContainer = document.getElementById('alert-container')
+            if(alertContainer){
+                alertContainer.style.display = 'none'
+            }
+        }, 3000)
+    </script>
 </body>
-</html>
+{% endblock %}
